added addition items to cart

--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,10 @@ html {
 body {
     position: relative;
     font-family: "Inter", system-ui;
+
+    &.blocked {
+        overflow: hidden;
+    }
 }
 
 img {
