--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -21,12 +21,22 @@
         border: 1px solid #f8f8f8;
         box-shadow: 0px 14px 30px 0px rgba(0, 0, 0, 0.05);
         transform: translateY(-5px);
+
+        .card__fav {
+            opacity: 1;
+            pointer-events: auto;
+        }
     }
 
     &__fav {
         position: absolute;
         top: 2rem;
         left: 2rem;
+
+        opacity: 0;
+        pointer-events: none;
+        
+        transition: opacity .3s ease-in-out;
     }
 
     &__img {
@@ -70,14 +80,14 @@
         border-radius: 10px;
         border: 1px solid #c5c5c5;
 
-        transition: background-color 0.3s ease-in-out;
+        transition: background-color 0.15s ease-in-out;
 
         svg {
             width: 20px;
             min-width: 20px;
             stroke: #a0a0a0;
 
-            transition: stroke 0.3s ease-in-out;
+            transition: stroke 0.15s ease-in-out;
         }
 
         &:hover {
@@ -86,6 +96,10 @@
             svg {
                 stroke: white;
             }
+        }
+
+        &:active {
+            background-color: #999898;
         }
     }
 }
