--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -2,14 +2,26 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-color: rgba(0, 0, 0, .5);
 
+    overflow: hidden;
+
     z-index: 11;
 
-    // opacity: 0;
-    // pointer-events: none;
+    opacity: 0;
+    pointer-events: none;
+
+    &.active {
+        pointer-events: auto;
+        opacity: 1;
+
+        .cart {
+            transform: none;
+        }
+    }
+    
 }
 
 .cart {
@@ -19,6 +31,7 @@
 
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 
     height: 100%;
     width: 385px;
@@ -27,23 +40,42 @@
 
     background-color: #fff;
 
+    transform: translateX(100%);
+    transition: transform .3s ease-in-out;
+
     z-index: 12;
 
     &__title {
-        margin-bottom: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        margin-bottom: 2rem;
 
         font-size: 24px;
         font-weight: 700;
+
+        .cart__close {
+            cursor: pointer;
+
+            opacity: .5;
+
+            transition: opacity .15s ease-in-out;
+
+            &:hover {
+                opacity: 1;
+            }
+        }
     }
 
     &__items {
         display: flex;
         flex-direction: column;
         gap: 20px;
-    }
 
-    &__order {
-        margin-top: auto;
+        overflow: auto;
+
+        flex: 1;
     }
 
     &__btn {
@@ -68,7 +100,7 @@
 
         overflow: hidden;
 
-        transition: color .3s ease-in-out;
+        transition: color .2s ease-in-out;
 
         &::before,
         &::after {
@@ -78,34 +110,34 @@
             bottom: -2px;
             left: -2px;
             right: -2px;
-            width: calc(53% + 2px);
 
             background-color: darkslategray;
 
             border: 2px solid darkslategray;
             
             
-            transition: transform .4s ease-in-out;
+            transition: transform .2s ease-in-out;
             
             z-index: -1;
         }
         
         &::before {
-            left: -2px;
             transform: translateX(-100%);
         }
 
         &::after {
-            right: -2px;
             transform: translateX(100%);
         }
 
         &:hover {
             color: white;
 
-            &::after,
             &::before {
-                transform: none;
+                transform: translateX(-40%);
+            }
+
+            &::after {
+                transform: translateX(40%);
             }
         }
     }
